--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,30 @@
- .gitignore
- dist/
- runtime/doc/options.txt.orig
- src/auto/config.cache
- src/auto/config.h
- src/auto/config.log
- src/auto/config.mk
- src/auto/config.status
- src/auto/if_perl.c
- src/auto/osdef.h
- src/auto/pathdef.c
- src/objects/
- src/option.c.orig
- src/screen.c.orig
- src/wim
- src/xxd/xxd
+dist/
+runtime/doc/options.txt.orig
+src/auto/
+src/objects/
+src/option.c.orig
+src/screen.c.orig
+src/wim
+src/xxd/xxd
+src/po/
+Contents.info
+README.txt.info
+README_ami.txt.info
+README_amibin.txt.info
+README_amisrc.txt.info
+Vim.info
+Xxd.info
+csdpmi4b.zip
+runtime.info
+src.info
+vimdir.info
+vimtutor.com
+
+#src/auto/config.cache
+#src/auto/config.h
+#src/auto/config.log
+#src/auto/config.mk
+#src/auto/config.status
+#src/auto/if_perl.c
+#src/auto/osdef.h
+#src/auto/pathdef.c
